# Dodger

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  PLAYTEST_JOURNAL.md  PLAYTEST_JOURNAL_2.md  PLAYTEST_JOURNAL_3.md  PLAYTEST_JOURNAL_4.md  PLAYTEST_JOURNAL_5.md  PLAYTEST_JOURNAL_6.md  demo.py  dodger-repomix-output.xml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  qa_v3_playthrough.py  run_playwright_test.mjs  update_tests.py
.claude/: launch.json
.github/: pull_request_template.md
.serena/: project.yml
docs/: README.md  STATUS.md  playthrough-bug-log.md  ux-ui-autopsy-handoff.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scratch/: extract_css.txt  sweep_archetypes.py
scripts/: dev-restart.ps1
tests/: conftest.py  factories.py  test_aftermath_dedup.py  test_aftermath_payload.py  test_ai_intent.py  test_ai_lineup.py  test_ai_orders.py  test_ai_program_manager.py  test_ai_tactics.py  test_archetype_champion_parity.py  test_archetype_derivation.py  test_archetype_display_smoke.py  test_archetype_enum.py  test_attribute_consumers.py  test_auto_pilot.py  test_awards.py  test_broadcast.py  test_broadcast_official_scoreline.py  test_build_from_scratch_validation.py  test_canonical_fielded_six.py  test_career.py  test_career_state.py  test_ceremony_payload.py  test_coach_policy.py  test_coach_policy_v2.py  test_command_center.py  test_command_center_ruleset_disclosure.py  test_command_plan_lock_preserves_tactics.py  test_command_week_ai_tactics_reach_sim.py  (+210 more)
(+858 files in other folders)
