[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dodgeball-sim"
version = "0.1.0"
description = "Integrity-first dodgeball simulation prototype"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=7.4",
]

[project.scripts]
dodgeball-sim = "dodgeball_sim.cli:main"
dodgeball-manager = "dodgeball_sim.web_cli:main"
dodgeball-manager-web = "dodgeball_sim.web_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
norecursedirs = [
    "output",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
    "frontend/node_modules",
]
